--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ i:hover {
     margin-top: 0;
     background-color: aliceblue;
     padding-left: 20px;
+    padding-top: 10px;
     border-top: 1px solid black;
 }
 
